--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/slider": "^4.5.5",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.25",
+    "expo-blur": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.76.6",
+    "react-native-blur": "^3.2.2",
+    "react-native-gesture-handler": "^2.22.0",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
