--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
