--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.13",
     "expo": "~52.0.25",
     "expo-blur": "^14.0.2",
+    "expo-linking": "^7.0.5",
     "expo-status-bar": "~2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
