--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.76.6",
     "react-native-blur": "^3.2.2",
     "react-native-gesture-handler": "^2.22.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
