--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/slider": "^4.5.5",
+    "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -19,9 +20,10 @@
     "AsyncStorage": "^0.1.5",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
-    "expo": "~52.0.25",
+    "expo": "^52.0.37",
     "expo-blur": "^14.0.2",
     "expo-linking": "^7.0.5",
+    "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
