--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/slider": "^4.5.5",
