--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-cookies/cookies": "^6.2.1",
+    "@react-native-firebase/app": "^21.12.3",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -23,9 +24,13 @@
     "dayjs": "^1.11.13",
     "expo": "^52.0.37",
     "expo-blur": "^14.0.2",
+    "expo-dev-client": "~5.0.14",
+    "expo-firebase-core": "^6.0.0",
+    "expo-firebase-messaging": "^2.0.0",
     "expo-linking": "^7.0.5",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.76.6",
@@ -37,7 +42,8 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.5.0",
     "styled-components": "^5.3.11",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-build-properties": "~0.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
