#59 Feat:ai루틴 추가 시작 전 경고모달 추가

--- a/app.json
+++ b/app.json
@@ -13,19 +13,31 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "googleServicesFile": "./GoogleService-Info.plist",
+      "supportsTablet": true,
+      "bundleIdentifier": "com.aszini.sobok"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": ""
+      "package": "com.aszini.sobok"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5b7bd12a-3bea-44d6-9008-129de510a7ff"
       }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "expo-build-properties"
+    }
+  },
+  "web": {
+    "favicon": "./assets/favicon.png"
+  },
+  "plugins": [
+    "@react-native-firebase/app",
+    [
+      "expo-build-properties",
+      {
+        "ios": {
+          "useFrameworks": "static"
+        }
+      }
     ]
-  }
+  ]
 }
