--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -24,8 +24,8 @@
     "dayjs": "^1.11.13",
     "expo": "^52.0.37",
     "expo-blur": "^14.0.2",
+    "expo-build-properties": "~0.13.2",
     "expo-dev-client": "~5.0.14",
-    "expo-firebase-core": "^6.0.0",
     "expo-firebase-messaging": "^2.0.0",
     "expo-linking": "^7.0.5",
     "expo-splash-screen": "^0.29.22",
@@ -42,11 +42,11 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.5.0",
     "styled-components": "^5.3.11",
-    "zustand": "^5.0.3",
-    "expo-build-properties": "~0.13.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.31.0",
