--- a/ios/sobok/Info.plist
+++ b/ios/sobok/Info.plist
@@ -20,8 +20,28 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+    <key>CFBundleTypeRole</key>
+    <string>Editor</string>
+    <key>CFBundleURLSchemes</key>
+    <array>
+    <string>kakao55d52700cce0ecd8f944f1c8311ded0b</string>
+  </array>
+  </dict>
+  </array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+  <key>KAKAO_APP_KEY</key>
+  <string>55d52700cce0ecd8f944f1c8311ded0b</string>
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+  <string>kakao0123456789</string>
+  <string>kakaokompassauth</string>
+  <string>storykompassauth</string>
+  <string>kakaolink</string>
+  </array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
