#96 Feat:구글 로그인 및 초기 설정 구현 완료

--- a/ios/sobok/Info.plist
+++ b/ios/sobok/Info.plist
@@ -28,6 +28,7 @@
     <key>CFBundleURLSchemes</key>
     <array>
     <string>kakaof83381080c3d72f68b8b1eb9d49079ae</string>
+		<string>com.googleusercontent.apps.927685447127-a7muurhgj3me105a9vbhbklnq18at29c</string>
   </array>
   </dict>
   </array>
